--- a/src/Samples/P2F_Sample2_TypeProvider/P2F_Sample2_TypeProvider.csproj
+++ b/src/Samples/P2F_Sample2_TypeProvider/P2F_Sample2_TypeProvider.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>P2F_Sample2_TypeProvider</RootNamespace>
     <AssemblyName>TypeProvider</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -36,10 +36,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Management.Automation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Windows\Microsoft.NET\assembly\GAC_MSIL\System.Management.Automation\v4.0_3.0.0.0__31bf3856ad364e35\System.Management.Automation.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -53,6 +49,10 @@
     <Content Include="about_TypeProvider.help.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\PowerShellStandard\src\3\System.Management.Automation-lib.csproj">
+      <Project>{7bd892e4-901f-4671-b743-6c2aa391ecab}</Project>
+      <Name>System.Management.Automation-lib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\CodeOwls.PowerShell\CodeOwls.PowerShell.Paths\CodeOwls.PowerShell.Paths.csproj">
       <Project>{ed0453c7-c25a-4354-ac7a-046846d5e7ff}</Project>
       <Name>CodeOwls.PowerShell.Paths</Name>
