--- a/src/CodeOwls.PowerShell/CodeOwls.PowerShell.Paths/CodeOwls.PowerShell.Paths.csproj
+++ b/src/CodeOwls.PowerShell/CodeOwls.PowerShell.Paths/CodeOwls.PowerShell.Paths.csproj
@@ -11,13 +11,27 @@
     -->
     <!--<RuntimeIdentifiers>win7-x64;win81-x64;win10-x64</RuntimeIdentifiers>-->
     <!--<NetStandardImplicitPackageVersion>2.0.5</NetStandardImplicitPackageVersion>-->
-</PropertyGroup>
+  </PropertyGroup>
+
+
+  <!-- Once the PowerShellStandard.Library releases a fix to theirs, we'll use that    
+       Until then, you need this on disk: https://github.com/Jaykul/PowerShellStandard -->
+  <Choose>
+    <When Condition="$(DefineConstants.Contains(PS5))">
+      <ItemGroup>
+        <!-- <PackageReference Include="PowerShellStandard.Library" Version="[5.1.0-preview-03,6.0.0)" /> -->
+        <ProjectReference Include="..\..\..\..\PowerShellStandard\src\5\System.Management.Automation-lib.csproj" />
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <!-- <PackageReference Include="PowerShellStandard.Library" Version="[3.0.0-preview-03,4.0.0)" /> -->
+        <ProjectReference Include="..\..\..\..\PowerShellStandard\src\3\System.Management.Automation-lib.csproj" />
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
 
   <ItemGroup>
     <PackageReference Include="System.Security.AccessControl" Version="4.5.0" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\PowerShellStandard\src\5\System.Management.Automation-lib.csproj" />
-  </ItemGroup>
-
 </Project>
