Update PowerShellStandard reference

--- a/src/CodeOwls.PowerShell/CodeOwls.PowerShell.Provider/CodeOwls.PowerShell.Provider.csproj
+++ b/src/CodeOwls.PowerShell/CodeOwls.PowerShell.Provider/CodeOwls.PowerShell.Provider.csproj
@@ -17,7 +17,7 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <PackageReference Include="PowerShellStandard.Library" Version="[5.1.0-preview-04,6.0.0)" />
+        <PackageReference Include="PowerShellStandard.Library" Version="5.1.0" />
       </ItemGroup>
     </Otherwise>
   </Choose>
