--- a/src/CodeOwls.PowerShell/CodeOwls.PowerShell.Paths/CodeOwls.PowerShell.Paths.csproj
+++ b/src/CodeOwls.PowerShell/CodeOwls.PowerShell.Paths/CodeOwls.PowerShell.Paths.csproj
@@ -13,7 +13,7 @@
     <!--<NetStandardImplicitPackageVersion>2.0.5</NetStandardImplicitPackageVersion>-->
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Security.AccessControl" Version="4.5.0" />
+    <PackageReference Include="System.Security.AccessControl" Version="5.0.0" />
   </ItemGroup>
   <Choose>
     <When Condition="$(DefineConstants.Contains(PS3))">
@@ -24,7 +24,7 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <PackageReference Include="PowerShellStandard.Library" Version="[5.1.0-preview-04,6.0.0)" />
+        <PackageReference Include="PowerShellStandard.Library" Version="5.1.0" />
       </ItemGroup>
     </Otherwise>
   </Choose>
