--- a/src/CodeOwls.PowerShell/CodeOwls.PowerShell.Paths/CodeOwls.PowerShell.Paths.csproj
+++ b/src/CodeOwls.PowerShell/CodeOwls.PowerShell.Paths/CodeOwls.PowerShell.Paths.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>CodeOwls.PowerShell.Paths</RootNamespace>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DebugType>embedded</DebugType>
     <!--
     <DelaySign>true</DelaySign>
     <AssemblyOriginatorKeyFile>../../../../signing/35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
